@@ -1,0 +1,1 @@
+Test passes if it does not crash and "script" inside "rect" does not execute.
